Created an attachment (id=6889)
Setup fail
I was installing ReactOS and suddenly installation failed saying "Setup could not create install directories". I wish there was an option to see what directories failed to be created.
- relates to
-
CORE-7987 [usetup] Setup fails to install when too many output directories are defined
-
- Resolved
-